--- a/tecolotl-web/src/main/webapp/alumno/select-mindmap.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/select-mindmap.xhtml
@@ -28,8 +28,9 @@
                 <div  uk-grid="">
                         <ui:repeat value="#{seleccionMapaMentalControlador.mapaMentalResueltoModeloLista}" var="mapaMental" >
                             <div class="uk-width-1-3@m card-mapa uk-position-relative">
-                                    <h:graphicImage library="img" name="/alumno/mapa-mental/preview/#{mapaMental.cardinalidad}.jpg"/>
-                                    <h3 class="respondido"> Respondidos:#{mapaMental.totalResueltos}</h3>
+                                <h:link outcome="/alumno/mapa-mental/#{mapaMental.cardinalidad}" value="Mapa Mental #{mapaMental.cardinalidad}">
+                                    <h:graphicImage library="img" name="/alumno/mapa-mental/preview/#{mapaMental.cardinalidad}.jpg"/></h:link>
+
                             </div>
                         </ui:repeat>
 
