--- a/tecolotl-web/src/main/webapp/alumno/activities.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/activities.xhtml
@@ -80,16 +80,16 @@
                                     <h:form>
                                         <h:panelGroup layout="block" styleClass="uk-grid uk-grid-small uk-grid-divider uk-flex uk-flex-middle" pt:data-uk-grid="">
                                             <div class="uk-width-expand ">
-                                                <h:commandLink action="#{alumnoControlador.seleccion(tareaActvidadModelo)}" value="realizar tarea"/>
+                                                <h:commandLink disabled="true" action="#{alumnoControlador.seleccion(tareaActvidadModelo)}" value="realizar tarea"/>
                                                 <h:panelGroup layout="block" styleClass="uk-grid uk-grid-small uk-child-width-1-5" pt:uk-grid="">
                                                     <div>
-                                                        <h:graphicImage pt:data-uk-tooltip="title: Listening" styleClass="uk-icon-image uk-svg" library="img" name="icono/listen.svg"/>
+                                                        <h:graphicImage  pt:data-uk-tooltip="title: Listening" styleClass="uk-icon-image uk-svg" library="img" name="icono/listen.svg"/>
                                                     </div>
                                                     <div>
                                                         <h:graphicImage pt:data-uk-tooltip="title: Trasncript" styleClass="uk-icon-image uk-svg" library="img" name="icono/transcript1.svg" />
                                                     </div>
                                                     <div>
-                                                        <h:graphicImage  pt:data-uk-tooltip="title: Reading" styleClass="uk-icon-image uk-svg " library="img" name="icono/reading.svg" />
+                                                        <h:graphicImage pt:data-uk-tooltip="title: Reading" styleClass="uk-icon-image uk-svg " library="img" name="icono/reading.svg" />
                                                     </div>
                                                     <div>
                                                         <h:graphicImage pt:data-uk-tooltip="title: Grammar" styleClass="uk-icon-image uk-svg " library="img" name="icono/gramatica.svg" />
@@ -138,8 +138,7 @@
             //    the player should play for six seconds and then stop.
             var done = false;
             function onPlayerStateChange(event) {
-                if (event.data == YT.PlayerState.PLAYING &amp;&amp; !done) {
-
+                if (event.data == YT.PlayerState.ENDED &amp;&amp; !done) {
                     console.log('El video de youtube tiene un cambio');
                     done = true;
                 }else {
@@ -147,13 +146,6 @@
                 }
             }
 
-
-            function activaPlanetas(evt) {
-                var planetas = document.querySelectorAll('.planetas');
-                planetas.forEach(function (value) {
-                    value.classList.remove('planetas');
-                });
-            }
         </script>
     </ui:define>
 </ui:composition>
