--- a/tecolotl-web/src/main/webapp/alumno/select-mindmap.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/select-mindmap.xhtml
@@ -15,7 +15,7 @@
 
 <ui:composition template="/template/escolar/template-alumno.xhtml">
     <ui:define name="contenido">
-        <h:outputStylesheet library="css" name="/alumno/mapa-mental.css"/>
+        <h:outputStylesheet library="css" name="/alumno/select-mindmap.css"/>
         <div class="uk-section margen-superior">
             <div class="uk-container padding-contenedor">
                 <ui:repeat value="#{seleccionMapaMentalControlador.mapaMentalResueltoModeloLista}" var="mapaMental">
@@ -25,15 +25,22 @@
                     </h:link>
                     Respondidos:#{mapaMental.totalResueltos}<br/>
                 </ui:repeat>
-                <div  uk-grid="">
+                <div  uk-grid="" class="uk-hidden@m">
                         <ui:repeat value="#{seleccionMapaMentalControlador.mapaMentalResueltoModeloLista}" var="mapaMental" >
                             <div class="uk-width-1-3@m card-mapa uk-position-relative">
-                                <h:link outcome="/alumno/mapa-mental/#{mapaMental.cardinalidad}" value="Mapa Mental #{mapaMental.cardinalidad}">
-                                    <h:graphicImage library="img" name="/alumno/mapa-mental/preview/#{mapaMental.cardinalidad}.jpg"/></h:link>
-
+                                <h:link outcome="/alumno/mapa-mental/#{mapaMental.cardinalidad}">
+                                    <h:graphicImage library="img" name="/alumno/mapa-mental/preview/#{mapaMental.cardinalidad}.jpg"/>
+                                </h:link>
+                                <h3 class="respondido"> Respondidos:#{mapaMental.totalResueltos}</h3>
                             </div>
                         </ui:repeat>
-
+                </div>
+                <div  uk-grid="">
+                    <ui:repeat value="#{seleccionMapaMentalControlador.mapaMentalResueltoModeloLista}" var="mapaMental" >
+                        <div class="uk-width-1-3@m card-mapa mapa-#{mapaMental.cardinalidad}">
+                            <h3 class=""> Respondidos:#{mapaMental.totalResueltos}</h3>
+                        </div>
+                    </ui:repeat>
                 </div>
 
             </div>
