seleccion de minimap

--- a/tecolotl-web/src/main/webapp/alumno/activities.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/activities.xhtml
@@ -80,7 +80,7 @@
                                     <h:form>
                                         <h:panelGroup layout="block" styleClass="uk-grid uk-grid-small uk-grid-divider uk-flex uk-flex-middle" pt:data-uk-grid="">
                                             <div class="uk-width-expand ">
-                                                <h:commandLink id="#{alumnoControlador.tareaActividadModelo.idActividad}" action="#{alumnoControlador.seleccion(tareaActvidadModelo)}" value="realizar tarea"/>
+                                                <h:commandLink action="#{alumnoControlador.seleccion(tareaActvidadModelo)}" value="realizar tarea"/>
                                                 <h:panelGroup layout="block" styleClass="uk-grid uk-grid-small uk-child-width-1-5" pt:uk-grid="">
                                                     <div>
                                                         <h:graphicImage  pt:data-uk-tooltip="title: Listening" styleClass="uk-icon-image uk-svg" library="img" name="icono/listen.svg"/>
