--- a/tecolotl-web/src/main/webapp/alumno/mindmap/11.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/mindmap/11.xhtml
@@ -4,104 +4,163 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
+      xmlns:f="http://xmlns.jcp.org/jsf/core" xmlns:pt="http://xmlns.jcp.org/jsf/passthrough">
 <ui:composition template="/template/escolar/template-alumno.xhtml">
+    <f:metadata>
+        <f:viewParam name="cardinalidad" value="#{mapaMentalControlador.cardinalidad}" required="true"/>
+        <f:event type="preRenderView" listener="#{mapaMentalControlador.llenaLista}"/>
+    </f:metadata>
     <ui:define name="menu">
         <div class="left-content-box  content-box-dark">
-            <h:graphicImage library="img" name="avatar/astronauta-nino.svg" alt="" class="uk-border-circle profile-img"/>
-            <h6 class="uk-text-center uk-margin-remove-vertical text-light">John Doe</h6>
+            <h:graphicImage library="img" name="avatar/astronauta-nino.svg" alt="" class="uk-border-circle profile-img" rendered="#{true}"/>
+            <h:graphicImage library="img" name="avatar/astronauta-nina.svg" alt="" class="uk-border-circle profile-img" rendered="#{false}"/>
+            <h6 class="uk-text-center uk-margin-remove-vertical text-light nombre-usuario">#{alumnoControlador.alumnoModelo.apodo}</h6>
 
             <div class="uk-position-relative uk-text-center uk-display-block">
-                <a href="#" class="uk-text-small uk-text-muted uk-display-block uk-text-center" data-uk-icon="icon: triangle-down; ratio: 0.7">Admin</a>
+                <!--Modificar los datos para mostrar en el Alumno-->
+                <a href="#" class="uk-text-small uk-text-muted uk-display-block uk-text-center uk-text-capitalize" data-uk-icon="icon: triangle-down; ratio: 0.7">#{etiqueta['menu']}</a>
                 <!-- user dropdown -->
                 <div class="uk-dropdown user-drop" data-uk-dropdown="mode: click; pos: bottom-center; animation: uk-animation-slide-bottom-small; duration: 150">
                     <ul >
-                        <!--<li class="uk-active"><a href="#"><h:graphicImage library="img" name="alumno/planetas/planeta1.svg" width="80" alt=""/></a></li>-->
-                        <li><a href="#">Perfil</a></li>
-                        <li><a href="#">Chat</a></li>
-                        <li><a href="#">Cerrar Sesion</a></li>
+                        <li><a href="#" class="uk-text-capitalize">#{alumno['profile']}</a></li>
+                        <li><a href="#" class="uk-text-capitalize">#{etiqueta['close.sesion']}</a></li>
                     </ul>
                 </div>
                 <!-- /user dropdown -->
             </div>
         </div>
-
         <div class="left-nav-wrap  uk-visible@xl ">
             <ul class="uk-thumbnav uk-thumbnav-vertical uk-position-center uk-margin-large-top">
-                <li><h:link outcome="dashboard-alumno" ><h:graphicImage library="img" name="alumno/planetas/tierra.svg" width="80" alt=""/></h:link></li>
-                <li><h:link outcome="transcrip-alumno"><h:graphicImage library="img" name="alumno/planetas/planeta1.svg" width="80" alt=""/></h:link></li>
-                <li><h:link outcome="glosario-alumno" ><h:graphicImage library="img" name="alumno/planetas/planeta2.svg"  width="80" alt=""/></h:link></li>
-                <li class="uk-active"><h:link outcome="mapa-metal-alumno"><h:graphicImage library="img" name="alumno/planetas/planeta3.svg"  width="80" alt=""/></h:link></li>
-                <li><h:link outcome="biblioteca-alumno"><h:graphicImage library="img" name="alumno/planetas/planeta4.svg"  width="80" height="" alt=""/></h:link></li>
-                <li><a href="#"><h:graphicImage library="img" name="alumno/planetas/planeta5.svg"  width="80" alt=""/></a></li>
+                <li uk-tooltip="title: #{alumno['dashboard']}; pos: right"><h:link outcome="dashboard" ><h:graphicImage library="img" name="alumno/planetas/tierra.svg" width="80" alt=""/></h:link></li>
+                <li uk-tooltip="title: #{alumno['mind.map']}; pos: right"><h:link outcome="mapa-mental"><h:graphicImage library="img" name="alumno/planetas/planeta4.svg"  width="80" alt=""/></h:link></li>
             </ul>
-
         </div>
         <div class="left-nav-wrap uk-position-relative  uk-hidden@xl ">
             <ul class="uk-thumbnav uk-thumbnav-vertical uk-position-top-center uk-margin-small-top">
-                <li ><h:link outcome="dashboard-alumno" ><h:graphicImage library="img" name="alumno/planetas/tierra.svg"  width="50" alt=""/></h:link></li>
-                <li ><h:link outcome="transcrip-alumno"><h:graphicImage library="img" name="alumno/planetas/planeta1.svg"  width="50" alt=""/></h:link></li>
-                <li><h:link outcome="glosario-alumno" ><h:graphicImage library="img" name="alumno/planetas/planeta2.svg"  width="50" alt=""/></h:link></li>
-                <li class="uk-active" ><h:link outcome="mapa-metal-alumno"><h:graphicImage library="img" name="alumno/planetas/planeta3.svg"  width="50" alt=""/></h:link></li>
-                <li><h:link outcome="biblioteca-alumno"><h:graphicImage library="img" name="alumno/planetas/planeta4.svg"  width="50" alt=""/></h:link></li>
-                <li><a href="#"><h:graphicImage library="img" name="alumno/planetas/planeta5.svg"  width="50" alt=""/></a></li>
+                <li uk-tooltip="title: #{alumno['dashboard']}; pos: right"><h:link outcome="dashboard" ><h:graphicImage library="img" name="alumno/planetas/tierra.svg" width="50" alt=""/></h:link></li>
+                <li uk-tooltip="title: #{alumno['mind.map']}; pos: right"><h:link outcome="mapa-mental"><h:graphicImage library="img" name="alumno/planetas/planeta4.svg"  width="50" alt=""/></h:link></li>
             </ul>
-
         </div>
     </ui:define>
     <ui:define name="contenido">
         <h:outputStylesheet library="css" name="/alumno/mapa-secuencia.css"/>
         <div class="uk-section">
             <div class="uk-container  margen-superior color-fondo contenedor-padre margen-secuencia ">
-<!--                <div class="">-->
-                    <div class="uk-visible@s">
-                        <div class="imagen-secuencia">
-                            <h:graphicImage library="img" name="mounstro/whose.svg"/>
-                        </div>
-                        <div class="imagen-globo">
-                            <h3 class="titulo-mapa-11">Secuence Order</h3>
-                        </div>
+                <div class="uk-visible@s">
+                    <div class="imagen-secuencia">
+                        <h:graphicImage library="img" name="mounstro/whose.svg"/>
                     </div>
-                    <div class="uk-hidden@s">
-                        <h3 class="titulo-mapa-11 uk-text-center uk-margin-top">Secuence order</h3>
-                        <div class="imagen-secuencia-small">
-                            <h:graphicImage library="img" name="mounstro/whose.svg"/>
-                        </div>
+                    <div class="imagen-globo">
+                        <h3 class="titulo-mapa-11">Secuence Order</h3>
                     </div>
-                    <div class="caja1 posicion1 uk-padding-small uk-margin-small-bottom">
-                        <form action="">
-                            <div class="uk-child-width-1-3@m " uk-grid="">
-                                <div class="area-texto">
-                                    <textarea rows="" cols=""/>
-                                </div>
-                                <div class="area-texto">
-                                    <textarea rows="" cols=""/>
-                                </div>
-                                <div class="area-texto">
-                                    <textarea rows="" cols=""/>
-                                </div>
-                                <div class="area-texto">
-                                    <textarea rows="" cols=""/>
-                                </div>
-                                <div class="area-texto">
-                                    <textarea rows="" cols=""/>
-                                </div>
-                                <div class="area-texto">
-                                    <textarea rows="" cols=""/>
-                                </div>
-                                <div class="area-texto">
-                                    <textarea rows="" cols=""/>
-                                </div>
-                                <div class="area-texto">
-                                    <textarea rows="" cols=""/>
-                                </div>
-                                <div class="area-texto">
-                                    <textarea rows="" cols=""/>
-                                </div>
+                </div>
+                <div class="uk-hidden@s">
+                    <h3 class="titulo-mapa-11 uk-text-center uk-margin-top">Secuence order</h3>
+                    <div class="imagen-secuencia-small">
+                        <h:graphicImage library="img" name="mounstro/whose.svg"/>
+                    </div>
+                </div>
+                <div class="caja1 posicion1 uk-padding-small uk-margin-small-bottom">
+                    <h:outputText value="Respondido" rendered="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}"/>
+                    <h:form id="formulario-mapa-mental">
+                        <div class="uk-child-width-1-3@m " uk-grid="">
+                            <div class="area-texto">
+                                <h:inputTextarea styleClass=""
+                                                 id="uno"
+                                                 disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}"
+                                                 value="#{mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}"
+                                                 pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[0].pregunta}">
+                                    <f:validateRequired/>
+                                </h:inputTextarea>
+                                <h:message for="uno" styleClass=""/>
                             </div>
-                        </form>
-                    </div>
-<!--                </div>-->
+                            <div class="area-texto">
+                                <h:inputTextarea styleClass=""
+                                                 id="dos"
+                                                 disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[1].respuesta}"
+                                                 value="#{mapaMentalControlador.tareaMapaMentalModeloLista[1].respuesta}"
+                                                 pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[1].pregunta}">
+                                    <f:validateRequired/>
+                                </h:inputTextarea>
+                                <h:message for="dos" styleClass=""/>
+                            </div>
+                            <div class="area-texto">
+                                <h:inputTextarea styleClass=""
+                                                 id="tres"
+                                                 disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[2].respuesta}"
+                                                 value="#{mapaMentalControlador.tareaMapaMentalModeloLista[2].respuesta}"
+                                                 pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[2].pregunta}">
+                                    <f:validateRequired/>
+                                </h:inputTextarea>
+                                <h:message for="tres" styleClass=""/>
+                            </div>
+                            <div class="area-texto">
+                                <h:inputTextarea styleClass=""
+                                                 id="seis"
+                                                 disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[5].respuesta}"
+                                                 value="#{mapaMentalControlador.tareaMapaMentalModeloLista[5].respuesta}"
+                                                 pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[5].pregunta}">
+                                    <f:validateRequired/>
+                                </h:inputTextarea>
+                                <h:message for="seis" styleClass=""/>
+                            </div>
+                            <div class="area-texto">
+                                <h:inputTextarea styleClass=""
+                                                 id="cinco"
+                                                 disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[4].respuesta}"
+                                                 value="#{mapaMentalControlador.tareaMapaMentalModeloLista[4].respuesta}"
+                                                 pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[4].pregunta}">
+                                    <f:validateRequired/>
+                                </h:inputTextarea>
+                                <h:message for="cinco" styleClass=""/>
+                            </div>
+                            <div class="area-texto">
+                                <h:inputTextarea styleClass=""
+                                                 id="cuatro"
+                                                 disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[3].respuesta}"
+                                                 value="#{mapaMentalControlador.tareaMapaMentalModeloLista[3].respuesta}"
+                                                 pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[3].pregunta}">
+                                    <f:validateRequired/>
+                                </h:inputTextarea>
+                                <h:message for="cuatro" styleClass=""/>
+                            </div>
+                            <div class="area-texto">
+                                <h:inputTextarea styleClass=""
+                                                 id="siete"
+                                                 disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[6].respuesta}"
+                                                 value="#{mapaMentalControlador.tareaMapaMentalModeloLista[6].respuesta}"
+                                                 pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[6].pregunta}">
+                                    <f:validateRequired/>
+                                </h:inputTextarea>
+                                <h:message for="siete" styleClass=""/>
+                            </div>
+                            <div class="area-texto">
+                                <h:inputTextarea styleClass=""
+                                                 id="ocho"
+                                                 disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[7].respuesta}"
+                                                 value="#{mapaMentalControlador.tareaMapaMentalModeloLista[7].respuesta}"
+                                                 pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[7].pregunta}">
+                                    <f:validateRequired/>
+                                </h:inputTextarea>
+                                <h:message for="ocho" styleClass=""/>
+                            </div>
+                            <div class="area-texto">
+                                <h:inputTextarea styleClass=""
+                                                 id="nueve"
+                                                 disabled="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[8].respuesta}"
+                                                 value="#{mapaMentalControlador.tareaMapaMentalModeloLista[8].respuesta}"
+                                                 pt:placeholder="#{mapaMentalControlador.tareaMapaMentalModeloLista[8].pregunta}">
+                                    <f:validateRequired/>
+                                </h:inputTextarea>
+                                <h:message for="nueve" styleClass=""/>
+                            </div>
+                        </div>
+                        <h:commandButton id="boton-enviar-mapa-mental-movil"
+                                         value="Send"
+                                         rendered="#{empty mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}"
+                                         action="#{mapaMentalControlador.respondeMapaMental}"/>
+                    </h:form>
+                </div>
             </div>
         </div>
     </ui:define>
