Mapeo de los mapa mentales:12,13,14

--- a/tecolotl-web/src/main/webapp/alumno/activities.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/activities.xhtml
@@ -115,7 +115,7 @@
             var i = 0;
             linksTareas.forEach(function (value) {
                 value.dataset.id = videos[i].getAttribute('id');
-                value.style.visibility = 'hidden';
+                value.style.visibility = 'visible';
                 i++;
             });
             var players = new Array();
