--- a/tecolotl-web/src/main/webapp/alumno/mindmap/12.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/mindmap/12.xhtml
@@ -49,6 +49,7 @@
             <div class="uk-container margen-superior">
                 <div class="uk-child-width-1-2@m uk-margin-remove uk-visible@m" uk-grid="">
                     <div class="cuadro-padre1">
+                        <h:outputText value="Respondido" rendered="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}"/>
                         <h:form id="formulario-mapa-mental-d">
                             <div class="uk-width-1-1@s cuadro-hijo1">
                                 <div class="img-hijo1">
