--- a/tecolotl-web/src/main/webapp/alumno/mindmap/10.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/mindmap/10.xhtml
@@ -47,8 +47,10 @@
         <h:outputStylesheet library="css" name="/alumno/mapa-10.css"/>
         <div class="uk-section margen-superior uk-margin-small-right uk-margin-small-left ">
             <div class="uk-container padding-contenedor fondo-mapa-10">
+                <h:panelGroup layout="block" styleClass="realizado" rendered="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}">
+                    <span>Respondido</span>
+                </h:panelGroup>
                 <h:form id="formulario-mapa-mental">
-                    <h:outputText value="Respondido" rendered="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}"/>
                     <h:panelGroup layout="block" styleClass="uk-child-width-1-3@m uk-grid" pt:uk-grid="">
                         <div class="globo-10 ">
                             <h:inputTextarea styleClass="caja-texto-10"
