--- a/tecolotl-web/src/main/webapp/alumno/mindmap/13.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/mindmap/13.xhtml
@@ -45,8 +45,10 @@
     <ui:define name="contenido">
         <h:outputStylesheet library="css" name="/alumno/mapa-13.css"/>
         <div class="uk-section margen-superior uk-margin-small-left uk-margin-small-right">
-            <h:outputText value="Respondido" rendered="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}" styleClass="respuesta-13"/>
             <div class="uk-container padding-contenedor fondo-13 uk-position-relative" >
+                <h:panelGroup layout="block" styleClass="realizado" rendered="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}">
+                    <span>Respondido</span>
+                </h:panelGroup>
                 <h:graphicImage library="img" name="/mounstro/who.svg" styleClass="catarina-13"/>
                 <h:form id="formulario-mapamental" styleClass="uk-grid contenedor-formularios uk-visible@m" pt:uk-grid="">
                         <div class="caja-mapa-uno uk-position-relative uk-width-1-2@m caja-padre-5">
