--- a/tecolotl-web/src/main/webapp/alumno/mindmap/2.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/mindmap/2.xhtml
@@ -57,8 +57,11 @@
         <h:outputStylesheet library="css" name="/alumno/mapa-efecto.css"/>
         <div class="uk-section margen-superior">
             <h1 class="uk-text-center titulo-mapa-2">Blank cause and effect Diagram</h1>
-            <h:outputText value="Respondido" rendered="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}"/>
+
             <div class="uk-container fondo-mapa-efecto margen-mapa-efecto contenedor-efecto ">
+                <h:panelGroup layout="block" styleClass="realizado" rendered="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}">
+                    <span>Respondido</span>
+                </h:panelGroup>
                 <div class="imagen-pez uk-margin-auto">
                     <h:graphicImage library="img" name="/alumno/pescado.svg"/>
                 </div>
