--- a/tecolotl-web/src/main/webapp/alumno/mindmap/4.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/mindmap/4.xhtml
@@ -54,6 +54,9 @@
         <h:outputStylesheet library="css" name="/alumno/mapa-comparar.css"/>
         <div class="uk-section margen-superior">
             <div class="uk-container fondo-comparar uk-padding-remove">
+                <h:panelGroup layout="block" styleClass="realizado" rendered="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}">
+                    <span>Respondido</span>
+                </h:panelGroup>
                 <div class="nube-superior  uk-position-relative ">
                     <h:graphicImage library="img" name="/fondo/nubes-arriba.svg"/>
                 </div>
