--- a/tecolotl-web/src/main/webapp/alumno/mindmap/5.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/mindmap/5.xhtml
@@ -55,7 +55,9 @@
         <h:outputStylesheet library="css" name="/alumno/mapa-5.css"/>
         <div class="uk-section margen-superior uk-margin-small-left uk-margin-small-right">
             <div class="uk-container padding-contenedor fondo-mapa-5 uk-position-relative">
-                <h:outputText value="Respondido" rendered="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}"/>
+                <h:panelGroup layout="block" styleClass="realizado" rendered="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}">
+                    <span>Respondido</span>
+                </h:panelGroup>
                 <h:form id="formulario-mapa-mental">
                     <h3 class="titulo-mapa-5">Compare &amp; Contrast</h3>
                     <div class="contenido-5"></div>
