--- a/tecolotl-web/src/main/webapp/alumno/mindmap/9.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/mindmap/9.xhtml
@@ -55,13 +55,15 @@
         <h:outputStylesheet library="css" name="/alumno/mapa-idea.css"/>
         <div class="uk-section margen-superior">
             <div class="uk-container fondo-idea uk-position-relative margen-idea  ">
+                <h:panelGroup layout="block" styleClass="realizado" rendered="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}">
+                    <span>Respondido</span>
+                </h:panelGroup>
                 <p class="uk-position-absolute titulo-mapa-idea">Main idea:</p>
                 <div class="uk-margin-small-top">
                     <h:graphicImage library="img" name="alumno/pop-art/mensaje11.svg" styleClass="uk-display-block imagen-ard"/>
                 </div>
                 <h:form id="formulario-mapa_mental" class="uk-form-stacked">
                     <div class="uk-grid uk-child-width-1-4@m uk-position-relative uk-margin-large-top" uk-grid="">
-                        <h:outputText value="Respondido" rendered="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}"/>
                         <div class="uk-position-relative tam-contenido-mapa">
                             <div class="tam-gancho color-gancho1 posicion-gancho1">
                                 <h:graphicImage library="img" name="alumno/pop-art/gancho.svg" styleClass="uk-svg" pt:uk-svg="" />
